tests/transpiler/x/java/min_max_builtin.error
exit status 1
Main.java:5: error: cannot find symbol
        System.out.println(min(nums));
                           ^
  symbol:   method min(int[])
  location: class Main
Main.java:6: error: cannot find symbol
        System.out.println(max(nums));
                           ^
  symbol:   method max(int[])
  location: class Main
2 errors
