tests/transpiler/x/java/min_max_builtin.java
public class Main {
    static int[] nums = new int[]{3, 1, 4};

    public static void main(String[] args) {
        System.out.println(min(nums));
        System.out.println(max(nums));
    }
}
